@@ -1,5 +1,7 @@
 # Generated by roxygen2: do not edit by hand
 
+S3method(print,eTerm)
+export(eTerm)
 export(xCheckParallel)
 export(xCircos)
 export(xColormap)
