@@ -1,0 +1,110 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Definition for S3 class 'eTerm'</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="stylesheet" type="text/css" href="R.css" />
+</head><body>
+
+<table width="100%" summary="page for eTerm"><tr><td>eTerm</td><td style="text-align: right;">R Documentation</td></tr></table>
+
+<h2>Definition for S3 class <code>eTerm</code></h2>
+
+<h3>Description</h3>
+
+<p><code>eTerm</code> mush have following components: term_info, annotation, g,
+data, background, overlap, fc, zscore, pvalue, adjp, cross.
+</p>
+
+
+<h3>Usage</h3>
+
+<pre>
+eTerm(term_info, annotation, g, data, background, overlap, fc, zscore,
+pvalue,
+adjp, cross)
+
+## S3 method for class 'eTerm'
+print(x, ...)
+</pre>
+
+
+<h3>Arguments</h3>
+
+<table summary="R argblock">
+<tr valign="top"><td><code>term_info</code></td>
+<td>
+<p>a data frame</p>
+</td></tr>
+<tr valign="top"><td><code>annotation</code></td>
+<td>
+<p>a list</p>
+</td></tr>
+<tr valign="top"><td><code>g</code></td>
+<td>
+<p>an 'igraph' object</p>
+</td></tr>
+<tr valign="top"><td><code>data</code></td>
+<td>
+<p>a vector</p>
+</td></tr>
+<tr valign="top"><td><code>background</code></td>
+<td>
+<p>a vector</p>
+</td></tr>
+<tr valign="top"><td><code>overlap</code></td>
+<td>
+<p>a vector</p>
+</td></tr>
+<tr valign="top"><td><code>fc</code></td>
+<td>
+<p>a vector</p>
+</td></tr>
+<tr valign="top"><td><code>zscore</code></td>
+<td>
+<p>a vector</p>
+</td></tr>
+<tr valign="top"><td><code>pvalue</code></td>
+<td>
+<p>a vector</p>
+</td></tr>
+<tr valign="top"><td><code>adjp</code></td>
+<td>
+<p>a vector</p>
+</td></tr>
+<tr valign="top"><td><code>cross</code></td>
+<td>
+<p>a matrix</p>
+</td></tr>
+<tr valign="top"><td><code>x</code></td>
+<td>
+<p>an object of class <code>eTerm</code></p>
+</td></tr>
+<tr valign="top"><td><code>...</code></td>
+<td>
+<p>other parameters</p>
+</td></tr>
+</table>
+
+
+<h3>Value</h3>
+
+<p>an object of S3 class <code>eTerm</code>
+</p>
+
+
+<h3>Examples</h3>
+
+<pre>
+## Not run: 
+# Load the library
+library(Pi)
+
+## End(Not run)
+RData.location &lt;- "http://galahad.well.ox.ac.uk/bigdata_dev"
+## Not run: 
+eTerm(term_info, annotation, g, data, background, overlap, fc, zscore,
+pvalue, adjp, cross)
+
+## End(Not run)
+</pre>
+
+
+</body></html>
