@@ -251,6 +251,9 @@ information, where nTerm is the number of terms, and the 4 columns are
 term storing its annotations. Always, terms are identified by &quot;id&quot;
 </p>
 </li>
+<li><p><code>g</code>: an igraph object to represent DAG
+</p>
+</li>
 <li><p><code>data</code>: a vector containing input data in consideration. It
 is not always the same as the input data as only those mappable are
 retained
